[package]
name = "mesa-api"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.3"
dotenv = "0.15"
thiserror = "2.0"
opentelemetry = { version = "0.26" }
opentelemetry-otlp = { version = "0.26", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
tracing-opentelemetry = "0.27"
base64 = "0.22"
actix-web = "4.0"
reqwest = {version = "0.12", features = ["json"]}
jsonwebtoken = "9.3"
chrono = "0.4"
futures = "0.3"
pin-project-lite = "0.2"

bm-lib = { workspace = true }